Release 3.1.0
Release notes are available at:
https://docs.dremio.com/release-notes/31-release-notes.html